# TaskFlow

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/models/: project.py  tag.py  task.py  user.py
app/routers/: auth.py  projects.py  tags.py  tasks.py  users.py
app/schemas/: project.py  tag.py  task.py  user.py
app/utils/: auth.py
